--- a/res/layout/my_main_xingtan.xml
+++ b/res/layout/my_main_xingtan.xml
@@ -277,6 +277,7 @@
                         android:layout_marginRight="10dp"
                         android:layout_marginTop="5dp"
                         android:layout_weight="8"
+                        android:background="@drawable/mrenzheng_03"
                         android:src="@drawable/f3_13" />
 
                     <TextView
