--- a/res/layout/near_xingtanxiangqingmobanhead.xml
+++ b/res/layout/near_xingtanxiangqingmobanhead.xml
@@ -15,88 +15,17 @@
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
             android:orientation="vertical" >
-
-            <LinearLayout
+			<ViewFlipper
+                android:id="@+id/vfpics"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical" >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="10dp" >
-
-                    <ImageView
-                        android:id="@+id/ImageView04"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:src="@drawable/d10_16" />
-
-                    <ImageView
-                        android:id="@+id/ImageView03"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:src="@drawable/d10_16" />
-
-                    <ImageView
-                        android:id="@+id/ImageView02"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:src="@drawable/d10_16" />
-
-                    <ImageView
-                        android:id="@+id/imageView1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:src="@drawable/d10_16" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="5dp" >
-
-                    <ImageView
-                        android:id="@+id/ImageView07"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:src="@drawable/d10_16" />
-
-                    <ImageView
-                        android:id="@+id/ImageView06"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:src="@drawable/d10_16" />
-
-                    <ImageView
-                        android:id="@+id/ImageView05"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:src="@drawable/d10_16" />
-
-                    <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:src="@drawable/d10_16" />
-                </LinearLayout>
-            </LinearLayout>
-
+                android:layout_height="wrap_content" >
+                <include
+        			layout="@layout/pictures_item" />
+                <include
+       				layout="@layout/pictures_item" />
+				<include
+       				layout="@layout/pictures_item" />
+            </ViewFlipper>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
