--- a/res/layout/register_first_layout.xml
+++ b/res/layout/register_first_layout.xml
@@ -27,7 +27,7 @@
                 android:paddingTop="15dp" >
 
                 <AutoCompleteTextView
-                    android:id="@+id/et_username"
+                    android:id="@+id/et_register_username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@null"
