--- a/res/layout/my_haoyou_item.xml
+++ b/res/layout/my_haoyou_item.xml
@@ -70,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
-            android:text="距1523km"
+            android:text="北京"
             android:textColor="@color/color_4"
             android:textSize="@dimen/new_size_2" />
 
