--- a/res/layout/my_main_mingxing.xml
+++ b/res/layout/my_main_mingxing.xml
@@ -132,7 +132,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="226"
-                            android:textColor="@color/color_3" />
+                            android:textColor="@color/color_2" />
 
                         <TextView
                             android:id="@+id/textView5"
@@ -158,7 +158,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="123"
-                            android:textColor="@color/color_3" />
+                            android:textColor="@color/color_2" />
 
                         <TextView
                             android:id="@+id/textView7"
@@ -184,7 +184,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="145"
-                            android:textColor="@color/color_3" />
+                            android:textColor="@color/color_2" />
 
                         <TextView
                             android:id="@+id/textView9"
@@ -204,7 +204,12 @@
                         android:layout_weight="1"
                         android:gravity="center_horizontal"
                         android:orientation="vertical" >
-
+						<TextView
+                            android:id="@+id/textView10"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="46"
+                            android:textColor="@color/color_2" />
                         <TextView
                             android:id="@+id/textView11"
                             android:layout_width="wrap_content"
@@ -212,12 +217,7 @@
                             android:text="粉丝"
                             android:textColor="@color/color_3" />
 
-                        <TextView
-                            android:id="@+id/textView10"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="46"
-                            android:textColor="@color/color_3" />
+                        
 
                     </LinearLayout>
                 </LinearLayout>
@@ -306,12 +306,15 @@
                         android:layout_weight="5"
                         android:src="@drawable/m19_13" />
                 </LinearLayout>
-
-                <LinearLayout
+				<LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/spilt_line_color" >
+                </LinearLayout>
+                <LinearLayout
                     android:id="@+id/lmyfuwu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="15dp"
                     android:background="@color/main_light_white"
                     android:gravity="center_vertical" >
 
@@ -349,7 +352,48 @@
                     android:layout_height="1dp"
                     android:background="@color/spilt_line_color" >
                 </LinearLayout>
+<LinearLayout
+                    android:id="@+id/lmyrenzheng"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"
+                    android:background="@color/main_light_white"
+                    android:gravity="center_vertical" >
 
+                    <ImageView
+                        android:id="@+id/imgrenzheng"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_weight="8"
+                        android:src="@drawable/mrenzheng_03" />
+
+                    <TextView
+                        android:id="@+id/TextViewrenzheng"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="87"
+                        android:text="我的认证"
+                        android:textColor="@color/new_color_1"
+                        android:textSize="15dp" />
+
+                    <ImageView
+                        android:id="@+id/ImageView02"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:layout_weight="5"
+                        android:src="@drawable/m19_13" />
+                </LinearLayout>
+                
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/spilt_line_color" >
+                </LinearLayout>
                 <LinearLayout
                     android:id="@+id/lheimingdan"
                     android:layout_width="match_parent"
@@ -392,7 +436,42 @@
                     android:layout_height="1dp"
                     android:background="@color/spilt_line_color" >
                 </LinearLayout>
+<LinearLayout
+                    android:id="@+id/lkefu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="1dp"
+                    android:background="@color/main_light_white"
+                    android:gravity="center_vertical" >
 
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="25dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="8"
+                        android:orientation="vertical" >
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/TextViewkefu"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="87"
+                        android:text="联系客服"
+                        android:textColor="@color/new_color_1"
+                        android:textSize="15dp" />
+
+                    <ImageView
+                        android:id="@+id/ImageViewkefu"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:layout_weight="5"
+                        android:src="@drawable/m19_13" />
+                </LinearLayout>
                 <LinearLayout
                     android:id="@+id/lgengxin"
                     android:layout_width="match_parent"
@@ -584,6 +663,42 @@
             android:layout_weight="5"
             android:background="@color/main_light_white" >
         </LinearLayout>
+        <LinearLayout
+                    android:id="@+id/lexit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="1dp"
+                    android:background="@color/main_light_white"
+                    android:gravity="center_vertical" >
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="25dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="8"
+                        android:orientation="vertical" >
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/TextViewexit"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="87"
+                        android:text="退出"
+                        android:textColor="@color/new_color_1"
+                        android:textSize="15dp" />
+
+                    <ImageView
+                        android:id="@+id/ImageViewexit"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:layout_weight="5"
+                        android:src="@drawable/m19_13" />
+                </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
