--- a/res/layout/my_xingtantonggao_item.xml
+++ b/res/layout/my_xingtantonggao_item.xml
@@ -29,14 +29,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1905电影网(薪酬5000/天)"
-            android:textColor="@color/bggray" />
+            android:textColor="@color/color_4" />
 
         <TextView
             android:id="@+id/tvtonggaoyaoqiu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="北京  18-24岁  女"
-            android:textColor="@color/bggray" />
+            android:textColor="@color/color_4" />
 
     </LinearLayout>
 
