--- a/res/layout/my_xingtanziliaobianjihead.xml
+++ b/res/layout/my_xingtanziliaobianjihead.xml
@@ -271,8 +271,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="200m"
-                        android:textColor="@color/bggray" />
+                        android:text="北京"
+                        android:textColor="@color/color_4" />
                 </LinearLayout>
 
                 <ImageView
