--- a/res/layout/dynamic_list_item.xml
+++ b/res/layout/dynamic_list_item.xml
@@ -83,13 +83,13 @@
             android:layout_marginTop="8dp" >
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/iv_dynamic_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/d3_52" />
 
             <ImageView
-                android:id="@+id/imageView4"
+                android:id="@+id/iv_dynamic_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
@@ -97,7 +97,7 @@
                 android:src="@drawable/d3_54" />
 
             <ImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/iv_dynamic_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/d3_56" />
@@ -106,53 +106,68 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp" >
-
-            <ImageView
-                android:id="@+id/iv_dynamic_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:src="@drawable/d10_36" />
+            android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/tv_dynamic_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="3dp"
-                android:layout_toRightOf="@+id/iv_dynamic_time"
-                android:text="10分钟前"
-                android:textColor="@color/color_4"
-                android:textSize="@dimen/new_size_1" />
-
-            <TextView
-                android:id="@+id/iv_dynamic_good_num"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="2dp"
-                android:layout_toLeftOf="@+id/iv_dynamic_good"
-                android:text="121"
-                android:textColor="@color/color_4"
-                android:textSize="@dimen/new_size_1" />
-
-            <ImageView
-                android:id="@+id/iv_dynamic_good"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="20dp"
-                android:layout_toLeftOf="@+id/iv_dynamic_message"
-                android:layout_centerVertical="true"
-                android:src="@drawable/d3_44" />
-
-            <ImageView
-                android:id="@+id/iv_dynamic_message"
+                android:id="@+id/tv_dynamic_add_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="10dp"
-                android:src="@drawable/d3_46" />
+                android:layout_marginRight="40dp"
+                android:visibility="gone"
+                android:text="+ 1"
+                android:textColor="@color/bt_green" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp" >
+
+                <ImageView
+                    android:id="@+id/iv_dynamic_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/d10_36" />
+
+                <TextView
+                    android:id="@+id/tv_dynamic_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="3dp"
+                    android:layout_toRightOf="@+id/iv_dynamic_time"
+                    android:text="10分钟前"
+                    android:textColor="@color/color_4"
+                    android:textSize="@dimen/new_size_1" />
+
+                <TextView
+                    android:id="@+id/iv_dynamic_good_num"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="2dp"
+                    android:layout_toLeftOf="@+id/iv_dynamic_good"
+                    android:text="121"
+                    android:textColor="@color/color_4"
+                    android:textSize="@dimen/new_size_1" />
+
+                <ImageView
+                    android:id="@+id/iv_dynamic_good"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="20dp"
+                    android:layout_toLeftOf="@+id/iv_dynamic_message"
+                    android:src="@drawable/d3_44" />
+
+                <ImageView
+                    android:id="@+id/iv_dynamic_message"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="10dp"
+                    android:src="@drawable/d3_46" />
+            </RelativeLayout>
 
         </RelativeLayout>
 
