--- a/res/layout/my_renzheng.xml
+++ b/res/layout/my_renzheng.xml
@@ -18,7 +18,7 @@
             android:layout_margin="10dp" >
 
             <ImageView
-                android:id="@+id/imageView1"
+                android:id="@+id/img1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -26,14 +26,14 @@
                 android:src="@drawable/m22_10" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/img2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/m22_03" />
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/img3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -41,11 +41,11 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/l1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_weight="1"
-            android:visibility="gone" >
+            android:layout_weight="1" >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -133,12 +133,12 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/l2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:visibility="gone" >
+            android:orientation="vertical" >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -194,6 +194,18 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal" >
 
+                    <ImageView
+                        android:id="@+id/imageView1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/d10_16" />
+
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/d11_03" />
+
                 </LinearLayout>
             </HorizontalScrollView>
 
@@ -218,6 +230,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/l3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -254,7 +267,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/btchongzhi"
+            android:id="@+id/btnext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_red"
