--- a/res/layout/my_xingtantonggao_item.xml
+++ b/res/layout/my_xingtantonggao_item.xml
@@ -1,12 +1,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:background="@color/main_white"
     android:gravity="center_vertical" >
 
     <ImageView
         android:id="@+id/imgtonggao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/main_white"
         android:src="@drawable/f10_49" />
 
     <LinearLayout
@@ -16,18 +18,21 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+        android:background="@color/main_white"
         android:orientation="vertical" >
 
         <TextView
             android:id="@+id/tvtonggaoname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/main_white"
             android:text="平面模特" />
 
         <TextView
             android:id="@+id/tvtonggaoneirong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/main_white"
             android:text="1905电影网(薪酬5000/天)"
             android:textColor="@color/color_4" />
 
@@ -35,6 +40,7 @@
             android:id="@+id/tvtonggaoyaoqiu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/main_white"
             android:text="北京  18-24岁  女"
             android:textColor="@color/color_4" />
 
