--- a/res/layout/near_xingtantonggao_item.xml
+++ b/res/layout/near_xingtantonggao_item.xml
@@ -1,17 +1,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical" >
+    android:gravity="center_vertical"
+    android:background="@color/main_white" >
 
     <ImageView
         android:id="@+id/imgtonggao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/f10_49" />
+        android:src="@drawable/f10_49"
+        android:background="@color/main_white" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/main_white"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
@@ -22,12 +25,14 @@
             android:id="@+id/tvtonggaoname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/main_white"
             android:text="平面模特" />
 
         <TextView
             android:id="@+id/tvtonggaoneirong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/main_white"
             android:text="1905电影网(薪酬5000/天)"
             android:textColor="@color/color_3" />
 
@@ -35,6 +40,7 @@
             android:id="@+id/tvtonggaoyaoqiu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/main_white"
             android:text="北京  18-24岁  女"
             android:textColor="@color/color_3" />
 
