--- a/res/layout/my_chongzhifangshi.xml
+++ b/res/layout/my_chongzhifangshi.xml
@@ -106,6 +106,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:textSize="@dimen/new_size_3"
                     android:text="乱世飞尘" />
 
                 <TextView
@@ -113,6 +114,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:textSize="@dimen/new_size_3"
                     android:text="客户编号:" />
 
                 <TextView
@@ -121,6 +123,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
                     android:layout_weight="1"
+                    android:textSize="@dimen/new_size_3"
                     android:text="12345" />
 
                 <TextView
@@ -128,6 +131,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:textSize="@dimen/new_size_3"
                     android:text="支付100元" />
             </LinearLayout>
 
@@ -176,6 +180,7 @@
                     android:id="@+id/textView12"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/color_4"
                     android:text="仅支持宝支付" />
             </LinearLayout>
 
@@ -192,16 +197,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/spilt_line_color"
+            android:background="@color/main_white"
             android:orientation="vertical" >
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="6dp"
+                android:background="@drawable/line1"
+                android:orientation="vertical" >
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/biankuang"
+                android:layout_marginTop="4dp"
+                android:background="@drawable/bg2"
                 android:gravity="bottom|center_horizontal"
                 android:orientation="vertical" >
 
