--- a/res/layout/my_haoyou_item.xml
+++ b/res/layout/my_haoyou_item.xml
@@ -86,8 +86,8 @@
         android:layout_marginTop="5dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:background="@drawable/btn_red"
-        android:text="添加"
+        android:background="@drawable/btn_tianjia"
+        android:text=""
         android:textColor="@color/white"
         android:textSize="@dimen/new_size_4" />
 
