--- a/res/layout/my_renzheng.xml
+++ b/res/layout/my_renzheng.xml
@@ -49,17 +49,23 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@drawable/linerenzheng" >
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/biankuangxuxian"
                 android:gravity="bottom" >
 
                 <ImageView
                     android:id="@+id/imageView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_marginLeft="30dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:src="@drawable/m3_03" />
 
                 <LinearLayout
@@ -76,7 +82,11 @@
                         android:text="吴沐熙vicky" />
                 </LinearLayout>
             </LinearLayout>
-
+			<LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@drawable/linerenzheng" >
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
