--- a/res/layout/near_xingtanxiangqingmobanhead.xml
+++ b/res/layout/near_xingtanxiangqingmobanhead.xml
@@ -37,25 +37,27 @@
                 android:gravity="center" >
 
                 <ImageView
-                    android:id="@+id/ImageView01"
+                    android:id="@+id/imgtab1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:maxWidth="10dp"
-                    android:src="@drawable/f10_24" />
-
-                <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxWidth="10dp"
-                    android:src="@drawable/f10_24" />
-
-                <ImageView
-                    android:id="@+id/imageView5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_marginRight="3dp"
                     android:maxWidth="10dp"
                     android:src="@drawable/f10_26" />
+
+                <ImageView
+                    android:id="@+id/imgtab2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="3dp"
+                    android:maxWidth="10dp"
+                    android:src="@drawable/f10_24" />
+
+                <ImageView
+                    android:id="@+id/imgtab3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxWidth="10dp"
+                    android:src="@drawable/f10_24" />
             </LinearLayout>
 
             <LinearLayout
