--- a/res/layout/pictures_item.xml
+++ b/res/layout/pictures_item.xml
@@ -19,28 +19,28 @@
             android:layout_marginTop="10dp" >
 
             <ImageView
-                android:id="@+id/ImageView04"
+                android:id="@+id/img1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/d10_16" />
 
             <ImageView
-                android:id="@+id/ImageView03"
+                android:id="@+id/img2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/d10_16" />
 
             <ImageView
-                android:id="@+id/ImageView02"
+                android:id="@+id/img3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/d10_16" />
 
             <ImageView
-                android:id="@+id/imageView1"
+                android:id="@+id/img4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -56,28 +56,28 @@
             android:layout_marginTop="5dp" >
 
             <ImageView
-                android:id="@+id/ImageView07"
+                android:id="@+id/img5"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/d10_16" />
 
             <ImageView
-                android:id="@+id/ImageView06"
+                android:id="@+id/img6"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/d10_16" />
 
             <ImageView
-                android:id="@+id/ImageView05"
+                android:id="@+id/img7"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/d10_16" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/img8"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
