工作管理添加

--- a/res/layout/my_workfans.xml
+++ b/res/layout/my_workfans.xml
@@ -9,7 +9,7 @@
 
 
 <ListView
-    android:id="@+id/lwork"
+    android:id="@+id/lyaoqing"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 </ListView>
