--- a/res/layout/my_heimingdan.xml
+++ b/res/layout/my_heimingdan.xml
@@ -5,11 +5,15 @@
     android:orientation="vertical" >
 
     <include layout="@layout/main_top_layout" />
-
-    <ListView
+    <com.timetalent.client.ui.view.ListViewCompat
         android:id="@+id/lheimingdan"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
+        android:layout_height="match_parent"
+        android:cacheColorHint="#00000000"
+        android:divider="#dddbdb"
+        android:dividerHeight="1.0px"
+        android:drawSelectorOnTop="false"
+        android:listSelector="@android:color/transparent"
+        android:scrollbars="none" />
 
 </LinearLayout>
