--- a/res/layout/register_three_layout.xml
+++ b/res/layout/register_three_layout.xml
@@ -28,12 +28,14 @@
                 android:paddingTop="15dp" >
 
                 <AutoCompleteTextView
-                    android:id="@+id/et_username"
+                    android:id="@+id/et_register_phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@null"
                     android:drawableLeft="@drawable/username_draw_xml"
                     android:drawablePadding="10dp"
+                    android:singleLine="true"
+                     android:numeric="integer"
                     android:ems="20"
                     android:focusable="true"
                     android:hint="@string/register_pwd_hint4"
@@ -72,13 +74,14 @@
                 android:paddingTop="15dp" >
 
                 <AutoCompleteTextView
-                    android:id="@+id/et_username"
+                    android:id="@+id/et_register_code"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@null"
                     android:drawableLeft="@drawable/username_draw_xml"
                     android:drawablePadding="10dp"
                     android:ems="20"
+                    android:singleLine="true"
                     android:focusable="true"
                     android:hint="@string/register_three_hint2"
                     android:textColorHint="@color/color_4"
